--- a/applications/source/debezium-source/README.adoc
+++ b/applications/source/debezium-source/README.adoc
@@ -184,7 +184,6 @@ debezium.properties.transforms.unwrap.add.fields=name,db # <5>
 debezium.properties.transforms.unwrap.delete.handling.mode=none # <5>
 debezium.properties.transforms.unwrap.drop.tombstones=true # <5>
 
-debezium.properties.database.history=io.debezium.relational.history.MemoryDatabaseHistory # <6>
 debezium.properties.schema.history.internal=io.debezium.relational.history.MemorySchemaHistory # <6>
 debezium.properties.offset.storage=org.apache.kafka.connect.storage.MemoryOffsetBackingStore # <6>
 
@@ -222,7 +221,6 @@ Use following properties to connect the Debezium Source to PostgreSQL:
 ----
 debezium.properties.connector.class=io.debezium.connector.postgresql.PostgresConnector # <1>
 
-debezium.properties.database.history=io.debezium.relational.history.MemoryDatabaseHistory # <2>
 debezium.properties.schema.history.internal=io.debezium.relational.history.MemorySchemaHistory # <2>
 debezium.properties.offset.storage=org.apache.kafka.connect.storage.MemoryOffsetBackingStore # <2>
 
@@ -290,12 +288,11 @@ debezium.properties.topic.prefix=my-topic
 debezium.properties.name=my-connector
 debezium.properties.database.server.id=85744
 
-debezium.properties.database.history=io.debezium.relational.history.MemoryDatabaseHistory # <2>
 debezium.properties.schema.history.internal=io.debezium.relational.history.MemorySchemaHistory # <2>
 debezium.properties.offset.storage=org.apache.kafka.connect.storage.MemoryOffsetBackingStore # <2>
 
 debezium.properties.mongodb.hosts=rs0/localhost:27017 # <3>
-debezium.properties.mongodb.name=dbserver1 # <3>
+debezium.properties.topic.prefix=dbserver1 # <3>
 debezium.properties.mongodb.user=debezium # <3>
 debezium.properties.mongodb.password=dbz # <3>
 debezium.properties.database.whitelist=inventory # <3>
@@ -343,7 +340,6 @@ Use following properties to connect the Debezium Source to SQLServer:
 ----
 debezium.properties.connector.class=io.debezium.connector.sqlserver.SqlServerConnector # <1>
 
-debezium.properties.database.history=io.debezium.relational.history.MemoryDatabaseHistory # <2>
 debezium.properties.schema.history.internal=io.debezium.relational.history.MemorySchemaHistory # <2>
 debezium.properties.offset.storage=org.apache.kafka.connect.storage.MemoryOffsetBackingStore # <2>
 
@@ -384,7 +380,7 @@ cat ./inventory.sql | docker exec -i dbz_oracle sqlplus debezium/dbz@//localhost
 
 [source,shell]
 ----
-java -jar debezium-source.jar --debezium.properties.connector.class=io.debezium.connector.mysql.MySqlConnector --debezium.properties.topic.prefix=my-topic --debezium.properties.name=my-connector --debezium.properties.database.server.id=85744  --debezium.properties.database.server.id=85744 --debezium.properties.database.user=debezium --debezium.properties.database.password=dbz --debezium.properties.database.hostname=localhost --debezium.properties.database.port=3306 --debezium.properties.database.history=io.debezium.relational.history.MemoryDatabaseHistory --debezium.properties.schema.history.internal=io.debezium.relational.history.MemorySchemaHistory --debezium.properties.offset.storage=org.apache.kafka.connect.storage.MemoryOffsetBackingStore
+java -jar debezium-source.jar --debezium.properties.connector.class=io.debezium.connector.mysql.MySqlConnector --debezium.properties.topic.prefix=my-topic --debezium.properties.name=my-connector --debezium.properties.database.server.id=85744  --debezium.properties.database.server.id=85744 --debezium.properties.database.user=debezium --debezium.properties.database.password=dbz --debezium.properties.database.hostname=localhost --debezium.properties.database.port=3306 --debezium.properties.schema.history.internal=io.debezium.relational.history.MemorySchemaHistory --debezium.properties.offset.storage=org.apache.kafka.connect.storage.MemoryOffsetBackingStore
 ----
 
 
