--- a/functions/common/debezium-autoconfigure/README.adoc
+++ b/functions/common/debezium-autoconfigure/README.adoc
@@ -2,7 +2,7 @@
 
 This module provides a generic https://debezium.io/documentation/reference/2.2/development/engine.html[DebeziumEngine.Builder] auto-configuration that can be reused and composed in other applications.
 
-NOTE: The `DebeziumEngine` doesn't not required Kafka or Kafka Connect as it runs embedded inside your application. This approach though comes with some delivery guarantee limitations as explained https://debezium.io/documentation/reference/2.2/development/engine.html#_handling_failures[here].
+IMPORTANT: The `DebeziumEngine` does not required Kafka or Kafka Connect as it runs embedded inside your application. This approach though comes with some delivery guarantee limitations as explained https://debezium.io/documentation/reference/2.2/development/engine.html$$#$$_handling_failures[here].
 
 The `Debezium Engine` is a https://en.wikipedia.org/wiki/Change_data_capture[Change Data Capture] (CDC) utility, that allows *capturing* database change events and process them with custom `java.util.Consumer` or `io.debezium.engine.ChangeConsumer` event handler implementations.
 
@@ -10,7 +10,8 @@ The `DebeziumEngine.Builder` auto-configuration is activated only if a https://d
 
 ## Quick Start
 
-To use of the `DebeziumEngine` one need to (1) add required <<dependencies>> to the project, (2) provide the necessary Debezium <<configuration-options>>, (3) implement custom <<changeEvent-handlers>> and register it with the engine and (4) build and submit the DebeziumEngine to an `Executor` or `ExecutorService` for execution.
+To use the `DebeziumEngine`, set the required <<dependencies>> and <<configuration-options>>, register a custom <<changeEvent-handlers>> with the engine and submit later for execution.
+ Those simple steps are illustrated in the following sections.
 
 [[dependencies]]
 ### Dependencies
@@ -24,7 +25,7 @@ To process the incoming database change events you need to include the Debezium 
 <dependency>
     <groupId>org.springframework.cloud.fn</groupId>
     <artifactId>debezium-autoconfigure</artifactId>
-    <version>{project-version}</version>
+    <version>${project-version}</version>
 </dependency>
 ----
 [source, groovy, subs="normal", role="secondary"]
@@ -60,7 +61,7 @@ compile "io.debezium:debezium-connector-postgres:{debezium-version}"
 Then implement your own `java.util.Consumer<ChangeEvent>` (or `ChangeConsumer<ChangeEvent>`) handler and wire it into a DebeziumEngine instance.
 
 It is just enough to have a `DebeziumEngine.Builder`, set your consumer implementation into it, build an engine and run it from within some `@Service` or alike implementation.
-Here are is an oversimplified example:
+Here is an oversimplified example:
 [source, java]
 ----
 public void simple(DebeziumEngine.Builder<ChangeEvent<byte[], byte[]>> builder) {
